== 0.1.5 2009-09-26

* Added visibility support to Claim class
* Updated Claim#create to use PUT request instead of POST
* Updated cf_claim_project to support -p/--private flag(s)
* Renamed store_codefumes_credentials to cf_store_credentials
* Added cf_release_project executable for releasing/deleting project claims

== 0.1.4 2009-09-26

* Updated require statements executables

== 0.1.3 2009-09-22

* Added ConfigFile#save_credentials
* Added ConfigFile#credentials
* Added store_codefumes_credentials executable
* Added support for claiming projects (Project#claim, Claim#create)
* Added cf_claim_project executable
* Added :local mode for API
* Removed (almost) all "require 'rubygems'" statements

== 0.1.2 2009-09-10

* Documentation updated
* Fixed dependency definitions in Rakefile

== 0.1.0 2009-09-08

* 1 major enhancement:
  * Initial release