@@ -5,6 +5,7 @@
 * Updated cf_claim_project to support -p/--private flag(s)
 * Renamed store_codefumes_credentials to cf_store_credentials
 * Added cf_release_project executable for releasing/deleting project claims
+* Added ConfigFile#api_key
 
 == 0.1.4 2009-09-26
 
